--- a/results/Snakefile
+++ b/results/Snakefile
@@ -12,7 +12,8 @@ RESULTS = expand("{path}/{file}", path = RESULTS_PATH,
                  file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt", 
                                                             # "grid_search_for_prior.txt", 
                                                               "digital_spike_in.txt", "fake_pearson_table.txt",
-                         "sim_boxplot.pdf", "sim2_boxplot.pdf", "scatters.pdf", "real_ROC_18S.pdf", "real_ROC_25S.pdf", "fake_ROC_18S.pdf", "fake_ROC_25S.pdf"])
+                         "sim_boxplot.pdf", "sim2_boxplot.pdf", "scatters.pdf", "real_ROC_18S.pdf", "real_ROC_25S.pdf", "fake_ROC_18S.pdf", "fake_ROC_25S.pdf",
+                         "sim_SEvsPE_boxplot.pdf", "sim2_SEvsPE_boxplot.pdf", "sim_modes_boxplot.pdf"])
 
 
 REAL = "dms_real"
@@ -275,8 +276,77 @@ rule generate_table_for_fake:
      output: "{}/fake_pearson_table.txt".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/analyzeFake {input[0]} {EXP_PATH}/{FAKE} 45 {output}"
 
+#### PE vs. SE
 
+rule run_PROBer_for_PE_reads:
+     input: TOOLS[3], TOOLS[5],
+            expand("{path}/{{sample_name}}_minus_{num}.fq", path = DATA_PATH, num = [1, 2]),
+            expand("{path}/{{sample_name}}_plus_{num}.fq", path = DATA_PATH, num = [1, 2]),
+            REF_FILT
+     output: expand("{path}/{{sample_name}}_PE.{suffix}", path = EXP_PATH, suffix = PROBER_SUFF)
+     threads: 30
+     shell:
+        "{PROBER} estimate --paired-end --bowtie2 --bowtie2-path {input[0]} -p {threads} --size-selection-min 21 --size-selection-max 526 {REF_FILT_NAME} " 
+        "{EXP_PATH}/{wildcards.sample_name}_PE --reads {input[2]} {input[3]} {input[4]} {input[5]}"
 
+rule generate_melt_file_for_PE:
+     input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
+            expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
+            expand("{path}/{{sample_name}}_{last_part}.beta", path = EXP_PATH, last_part = ["SE", "PE"])
+     output: "{}/{{sample_name}}_SEvsPE_melt.txt".format(EXP_PATH)
+     shell: "{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{wildcards.sample_name}_SEvsPE plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]}"
 
-             
-     
+rule generate_box_plot_for_PE:
+     input: "{}/dms_{{output_name,sim2?}}_SEvsPE_melt.txt".format(EXP_PATH)
+     output: "{}/{{output_name,sim2?}}_SEvsPE_boxplot.pdf".format(RESULTS_PATH)
+     shell: "{RESULTS_PATH}/scripts/genBoxPlot_SEvsPE {input} {output}"
+
+#### Why joint-mode and MAP estimates
+
+rule generate_joint_ML:
+     input: TOOLS[6],
+            expand("{path}/{name}_{channel}.bam", path = EXP_PATH, name = SIM, channel = CHANNELS),
+            REF_FILT
+     output: expand("{path}/{name}_SE_ML.{suffix}", path = EXP_PATH, name = SIM, suffix = PROBER_SUFF)
+     threads: 30
+     shell: "{input[0]}/PROBer-estimate-parameters -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 --maximum-likelihood "
+            "{REF_FILT_NAME} {EXP_PATH}/{SIM}_SE_ML --bam {input[1]} {input[2]}"
+
+rule generate_separate_MAP:
+     input: TOOLS[6],
+            expand("{path}/{name}_{channel}.bam", path = EXP_PATH, name = SIM, channel = CHANNELS),
+            REF_FILT
+     output: expand("{path}/{name}_SE_sep.{suffix}", path = EXP_PATH, name = SIM, suffix = ["gamma", "beta"]),
+             expand("{path}/{name}_SE_sep_{channel}.expr", path = EXP_PATH, name = SIM, channel = CHANNELS)
+     threads: 30
+     run:
+        shell("{input[0]}/PROBer-estimate-parameters-separately -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 " 
+              "{REF_FILT_NAME} {EXP_PATH}/{SIM}_SE_sep minus --bam {input[1]}")
+        shell("{input[0]}/PROBer-estimate-parameters-separately -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 " 
+              "{REF_FILT_NAME} {EXP_PATH}/{SIM}_SE_sep plus --bam {input[2]}")
+
+rule generate_separate_ML:
+     input: TOOLS[6],
+            expand("{path}/{name}_{channel}.bam", path = EXP_PATH, name = SIM, channel = CHANNELS),
+            REF_FILT
+     output: expand("{path}/{name}_SE_sep_ML.{suffix}", path = EXP_PATH, name = SIM, suffix = ["gamma", "beta"]),
+             expand("{path}/{name}_SE_sep_ML_{channel}.expr", path = EXP_PATH, name = SIM, channel = CHANNELS)
+     threads: 30
+     run:
+        shell("{input[0]}/PROBer-estimate-parameters-separately -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 --maximum-likelihood " 
+              "{REF_FILT_NAME} {EXP_PATH}/{SIM}_SE_sep_ML minus --bam {input[1]}")
+        shell("{input[0]}/PROBer-estimate-parameters-separately -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 --maximum-likelihood " 
+              "{REF_FILT_NAME} {EXP_PATH}/{SIM}_SE_sep_ML plus --bam {input[2]}")
+
+rule generate_melt_file_for_modes:
+     input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
+            expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
+            expand("{path}/{name}_{last_part}.beta", path = EXP_PATH, name = SIM, last_part = ["SE", "SE_ML", "SE_sep", "SE_sep_ML"])
+     output: expand("{path}/{name}_modes_melt.txt", path = EXP_PATH, name = SIM)
+     shell: "{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}"
+
+rule generate_box_plot_for_modes:
+     input: expand("{path}/{name}_modes_melt.txt", path = EXP_PATH, name = SIM)
+     output: "{}/sim_modes_boxplot.pdf".format(RESULTS_PATH)
+     shell: "{RESULTS_PATH}/scripts/genBoxPlot_modes {input} {output}"
+
