--- a/results/Snakefile
+++ b/results/Snakefile
@@ -11,7 +11,7 @@ PROBER_STAT = ["theta", "read_model"]
 RESULTS = expand("{path}/{file}", path = RESULTS_PATH, 
                  file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt", 
                                                             # "grid_search_for_prior.txt", 
-                                                              "digital_spike_in.txt", "fake_pearson_table.txt",
+                                                              "digital_spike_in.txt", "fake_pearson_table.txt", "sim_modes_table.txt",
                          "sim_boxplot.pdf", "sim2_boxplot.pdf", "scatters.pdf", "real_ROC_18S.pdf", "real_ROC_25S.pdf", "fake_ROC_18S.pdf", "fake_ROC_25S.pdf",
                          "sim_SEvsPE_boxplot.pdf", "sim2_SEvsPE_boxplot.pdf", "sim_modes_boxplot.pdf"])
 
@@ -304,12 +304,12 @@ rule generate_box_plot_for_PE:
 #### Why joint-mode and MAP estimates
 
 rule generate_joint_ML:
-     input: TOOLS[6],
+     input: TOOLS[5],
             expand("{path}/{name}_{channel}.bam", path = EXP_PATH, name = SIM, channel = CHANNELS),
             REF_FILT
      output: expand("{path}/{name}_SE_ML.{suffix}", path = EXP_PATH, name = SIM, suffix = PROBER_SUFF)
      threads: 30
-     shell: "{input[0]}/PROBer-estimate-parameters -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 --maximum-likelihood "
+     shell: "{PROBER} estimate -p {threads} --read-length 37 --size-selection-min 21 --size-selection-max 526 --maximum-likelihood "
             "{REF_FILT_NAME} {EXP_PATH}/{SIM}_SE_ML --bam {input[1]} {input[2]}"
 
 rule generate_separate_MAP:
@@ -341,7 +341,7 @@ rule generate_separate_ML:
 rule generate_melt_file_for_modes:
      input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
             expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
-            expand("{path}/{name}_{last_part}.beta", path = EXP_PATH, name = SIM, last_part = ["SE", "SE_ML", "SE_sep", "SE_sep_ML"])
+            expand("{path}/{name}_{mode}.beta", path = EXP_PATH, name = SIM, mode = ["SE", "SE_ML", "SE_sep", "SE_sep_ML"])
      output: expand("{path}/{name}_modes_melt.txt", path = EXP_PATH, name = SIM)
      shell: "{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}"
 
@@ -350,3 +350,9 @@ rule generate_box_plot_for_modes:
      output: "{}/sim_modes_boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot_modes {input} {output}"
 
+rule generate_table_for_modes:
+     input: "{}/sim_ground_truth.expr".format(SIMPARAM_PATH),
+            expand("{path}/{name}_{mode}.expr", path = EXP_PATH, name = SIM, mode = ["SE", "SE_ML"]),
+            expand("{path}/{name}_{mode}_{channel}.expr", path = EXP_PATH, name = SIM, mode = ["SE_sep", "SE_sep_ML"], channel = CHANNELS)
+     output: "{}/sim_modes_table.txt".format(RESULTS_PATH)
+     shell: "{RESULTS_PATH}/scripts/genModesTable {input[0]} {EXP_PATH}/{SIM} {output}"
