--- a/results/Snakefile
+++ b/results/Snakefile
@@ -13,7 +13,8 @@ RESULTS = expand("{path}/{file}", path = RESULTS_PATH,
                                                             # "grid_search_for_prior.txt", 
                                                               "digital_spike_in.txt", "fake_pearson_table.txt", "sim_modes_table.txt",
                          "sim_boxplot.pdf", "sim2_boxplot.pdf", "scatters.pdf", "real_ROC_18S.pdf", "real_ROC_25S.pdf", "fake_ROC_18S.pdf", "fake_ROC_25S.pdf",
-                         "sim_SEvsPE_boxplot.pdf", "sim2_SEvsPE_boxplot.pdf", "sim_modes_boxplot.pdf"])
+                         "sim_SEvsPE_boxplot.pdf", "sim_SEvsPE_half_boxplot.pdf", "sim2_SEvsPE_boxplot.pdf", "sim2_SEvsPE_half_boxplot.pdf",
+                         "sim_modes_boxplot.pdf", "sim_modes_half_boxplot.pdf"])
 
 
 REAL = "dms_real"
@@ -212,7 +213,7 @@ rule generate_melt_file:
 
 rule generate_box_plot:
      input: "{}/dms_{{out_name}}_results_melt.txt".format(EXP_PATH)
-     output: "{}/{{out_name}}_boxplot.pdf".format(RESULTS_PATH)
+     output: "{}/{{out_name,sim2?}}_boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot {input} {output}"
 
 #### Generate scatter plots for comparing abundance estimates between PROBer and RSEM
@@ -293,12 +294,16 @@ rule generate_melt_file_for_PE:
      input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
             expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
             expand("{path}/{{sample_name}}_{last_part}.beta", path = EXP_PATH, last_part = ["SE", "PE"])
-     output: "{}/{{sample_name}}_SEvsPE_melt.txt".format(EXP_PATH)
-     shell: "{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{wildcards.sample_name}_SEvsPE plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]}"
+     output: "{}/{{sample_name}}_SEvsPE{{half}}_melt.txt".format(EXP_PATH)
+     run:
+        if wildcards.half == "_half":
+           shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{wildcards.sample_name}_SEvsPE_half plot 45 {input[2]} {input[0]} {input[1]} 0 0.5 {input[3]} {input[4]} {input[5]}")
+        else:
+           shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{wildcards.sample_name}_SEvsPE plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]}")
 
 rule generate_box_plot_for_PE:
-     input: "{}/dms_{{output_name,sim2?}}_SEvsPE_melt.txt".format(EXP_PATH)
-     output: "{}/{{output_name,sim2?}}_SEvsPE_boxplot.pdf".format(RESULTS_PATH)
+     input: "{}/dms_{{output_name}}_SEvsPE{{half}}_melt.txt".format(EXP_PATH)
+     output: "{}/{{output_name,sim2?}}_SEvsPE{{half}}_boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot_SEvsPE {input} {output}"
 
 #### Why joint-mode and MAP estimates
@@ -342,12 +347,16 @@ rule generate_melt_file_for_modes:
      input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
             expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
             expand("{path}/{name}_{mode}.beta", path = EXP_PATH, name = SIM, mode = ["SE", "SE_ML", "SE_sep", "SE_sep_ML"])
-     output: expand("{path}/{name}_modes_melt.txt", path = EXP_PATH, name = SIM)
-     shell: "{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}"
+     output: expand("{path}/{name}_modes{{half}}_melt.txt", path = EXP_PATH, name = SIM)
+     run:
+        if wildcards.half == "_half":
+           shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes_half plot 45 {input[2]} {input[0]} {input[1]} 0 0.5 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}")
+        else:
+           shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}")
 
 rule generate_box_plot_for_modes:
-     input: expand("{path}/{name}_modes_melt.txt", path = EXP_PATH, name = SIM)
-     output: "{}/sim_modes_boxplot.pdf".format(RESULTS_PATH)
+     input: expand("{path}/{name}_modes{{half}}_melt.txt", path = EXP_PATH, name = SIM)
+     output: "{}/sim_modes{{half}}_boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot_modes {input} {output}"
 
 rule generate_table_for_modes:
