--- a/annotation/Makefile
+++ b/annotation/Makefile
@@ -1,4 +1,4 @@
 .PHONY : clean
 
 clean:
-	rm -rf *.fa *.fas *.gff *.gtf *.bpseq *.structure pT181* RNaseP_WT* arabidopsis_*.* *~ scripts/*~ .snakemake
+	rm -rf *.fa *.fas *.gff *.gtf *.bpseq *.structure pT181* RNaseP_WT* arabidopsis_*.* *~ scripts/*~ .snakemake SHAPE.t2g spikes_info.txt
