--- a/tools/Makefile
+++ b/tools/Makefile
@@ -2,4 +2,6 @@
 
 clean:
 	rm -rf *~ .snakemake
-	rm -rf cutadapt-1.6 samtools-0.1.19 bowtie-1.0.0 bowtie2-2.1.0 rsem-1.2.20 PROBer-0.1.2
+	rm -rf cutadapt-1.6 samtools-0.1.19 bowtie-1.0.0 bowtie2-2.1.0 rsem-1.2.20 PROBer-0.1.2 other_codes_0.1.1
+	rm -rf ._*
+
