--- a/results/Snakefile
+++ b/results/Snakefile
@@ -295,16 +295,16 @@ rule generate_melt_file_for_PE:
      input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
             expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
             expand("{path}/{{sample_name}}_{last_part}.beta", path = EXP_PATH, last_part = ["SE", "PE"])
-     output: "{}/{{sample_name}}_SEvsPE{{half}}_melt.txt".format(EXP_PATH)
+     output: "{}/{{sample_name}}_SEvsPE{{half}}melt.txt".format(EXP_PATH)
      run:
-        if wildcards.half == "_half":
+        if wildcards.half == "_half_":
            shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{wildcards.sample_name}_SEvsPE_half plot 45 {input[2]} {input[0]} {input[1]} 0 0.5 {input[3]} {input[4]} {input[5]}")
         else:
            shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{wildcards.sample_name}_SEvsPE plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]}")
 
 rule generate_box_plot_for_PE:
-     input: "{}/dms_{{output_name}}_SEvsPE{{half}}_melt.txt".format(EXP_PATH)
-     output: "{}/{{output_name,sim2?}}_SEvsPE{{half}}_boxplot.pdf".format(RESULTS_PATH)
+     input: "{}/dms_{{output_name}}_SEvsPE{{half}}melt.txt".format(EXP_PATH)
+     output: "{}/{{output_name,sim2?}}_SEvsPE{{half}}boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot_SEvsPE {input} {output}"
 
 #### Why joint-mode and MAP estimates
@@ -348,16 +348,16 @@ rule generate_melt_file_for_modes:
      input: expand("{ref_name}.{suffix}", ref_name = REF_FILT_NAME, suffix = ["mappability", "transcripts.fa"]),
             expand("{path}/sim_ground_truth.{suffix}", path = SIMPARAM_PATH, suffix = ["expr", "beta"]),
             expand("{path}/{name}_{mode}.beta", path = EXP_PATH, name = SIM, mode = ["SE", "SE_ML", "SE_sep", "SE_sep_ML"])
-     output: expand("{path}/{name}_modes{{half}}_melt.txt", path = EXP_PATH, name = SIM)
+     output: expand("{path}/{name}_modes{{half}}melt.txt", path = EXP_PATH, name = SIM)
      run:
-        if wildcards.half == "_half":
+        if wildcards.half == "_half_":
            shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes_half plot 45 {input[2]} {input[0]} {input[1]} 0 0.5 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}")
         else:
            shell("{RESULTS_PATH}/scripts/analyzeResAC_new {EXP_PATH}/{SIM}_modes plot 45 {input[2]} {input[0]} {input[1]} 0 1 {input[3]} {input[4]} {input[5]} {input[6]} {input[7]}")
 
 rule generate_box_plot_for_modes:
-     input: expand("{path}/{name}_modes{{half}}_melt.txt", path = EXP_PATH, name = SIM)
-     output: "{}/sim_modes{{half}}_boxplot.pdf".format(RESULTS_PATH)
+     input: expand("{path}/{name}_modes{{half}}melt.txt", path = EXP_PATH, name = SIM)
+     output: "{}/sim_modes{{half}}boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot_modes {input} {output}"
 
 rule generate_table_for_modes:
