Updated figure name and file name correspondence

--- a/results/Snakefile
+++ b/results/Snakefile
@@ -10,8 +10,7 @@ PROBER_STAT = ["theta", "read_model"]
 
 RESULTS = expand("{path}/{file}", path = RESULTS_PATH, 
                  file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt", 
-                                                             "grid_search_for_prior.txt", 
-                                                              "digital_spike_in.txt", "fake_pearson_table.txt", "sim_modes_table.txt",
+                         "grid_search_for_prior.txt", "digital_spike_in.txt", "fake_pearson_table.txt", "sim_modes_table.txt",
                          "sim_boxplot.pdf", "sim2_boxplot.pdf", "scatters.pdf", "real_ROC_18S.pdf", "real_ROC_25S.pdf", "fake_ROC_18S.pdf", "fake_ROC_25S.pdf",
                          "sim_SEvsPE_boxplot.pdf", "sim_SEvsPE_half_boxplot.pdf", "sim2_SEvsPE_boxplot.pdf", "sim2_SEvsPE_half_boxplot.pdf",
                          "sim_modes_boxplot.pdf", "sim_modes_half_boxplot.pdf"])
