--- a/tools/Snakefile
+++ b/tools/Snakefile
@@ -2,7 +2,7 @@ rule build_cutadapt:
 	input: "{name}.tar.gz"
 	output: "{name}/bin/cutadapt"
 	shell:
-		"tar -C {tools_path} -xzf {input} && "
+		"tar -C {tool_path} -xzf {input} && "
 		"cd {wildcards.name} && python setup.py build_ext -i && "
 		"cd $OLDPWD && touch {output}"
 
@@ -10,7 +10,7 @@ rule build_samtools:
 	input: "{name}.tar.bz2"
 	output: "{name}/samtools"
 	shell:
-		"tar -C {tools_path} -xjf {input} && "
+		"tar -C {tool_path} -xjf {input} && "
 		"cd {wildcards.name} && make && "
 		"cd $OLDPWD && touch {output}"
 
@@ -18,7 +18,7 @@ rule build_bowtie:
 	input: "{name}-src.zip"
 	output: "{name}/bowtie"
 	shell:
-		"unzip -d {tools_path} {input} && "
+		"unzip -d {tool_path} {input} && "
 		"cd {wildcards.name} && make && "
 		"cd $OLDPWD && touch {output}"
 
@@ -26,7 +26,7 @@ rule build_rsem:
 	input: "{name}.tar.gz"
 	output: expand("{{name}}/{cmd}", cmd = ["rsem-prepare-reference", "rsem-calculate-expression"])
 	shell:
-		"tar -C {tools_path} -xzf {input} && "
+		"tar -C {tool_path} -xzf {input} && "
 		"cd {wildcards.name} && make && "
 		"cd $OLDPWD && touch {output}"
 
@@ -34,6 +34,6 @@ rule build_PROBer:
 	input: "{name}.tar.gz"
 	output: expand("{{name}}/build/src/{cmd}", cmd = ["PROBer", "PROBer-single-batch-estimate"])
 	shell:
-		"tar -C {tools_path} -xzf {input} && "
+		"tar -C {tool_path} -xzf {input} && "
 		"mkdir -p {wildcards.name}/build && cd {wildcards.name}/build && cmake .. && make && "
 		"cd $OLDPWD && touch {output}"
