Added some .gitignore files

--- a/ground_truth/Makefile
+++ b/ground_truth/Makefile
@@ -1,4 +1,5 @@
 .PHONY : clean
 
 clean:
-	rm -rf *.bpseq *.structure *.fa *.isac pT181* RNaseP_WT* SHAPE.t2g spikes_info.txt *~ .snakemake 
+	rm -rf *.bpseq *.structure *.fa *.isac pT181* RNaseP_WT* SHAPE.t2g spikes_info.txt *~
+
