--- a/data/Makefile
+++ b/data/Makefile
@@ -1,9 +1,4 @@
 .PHONY: clean
 
 clean:
-	rm -f *~ .snakemake
-	rm -f *.fq
-	rm -f *.results
-
-
-
+	rm -rf *~ AssmannLab McmanusLab ChangLab GilbertLab YeoLab
